--- a/03_Løsningsforslag/Oppgaver-fra-boka/4_Tester_og_løkker_løsningsforslag.ipynb
+++ b/03_Løsningsforslag/Oppgaver-fra-boka/4_Tester_og_løkker_løsningsforslag.ipynb
@@ -122,9 +122,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Skriv inn et heltall:  2\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
