--- a/03_Løsningsforslag/Oppgaver-fra-boka/3_Introduksjon_til_programmering_løsningsforslag.ipynb
+++ b/03_Løsningsforslag/Oppgaver-fra-boka/3_Introduksjon_til_programmering_løsningsforslag.ipynb
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1158,11 +1158,11 @@
     }
    ],
    "source": [
-    "def karvonensFormel(H_hvile, alder, p):\n",
+    "def karvonens_formel(H_hvile, alder, p):\n",
     "    H_maks = 220 - alder\n",
     "    return (H_maks - H_hvile) * p/100 + H_hvile\n",
     "\n",
-    "print(f'Hjerteslag per minutt = {karvonensFormel(70, 20, 60)}')"
+    "print(f'Hjerteslag per minutt = {karvonens_formel(70, 20, 60)}')"
    ]
   },
   {
