--- a/01_Undervisningsnotater/3.-Grunnleggende-programmering/3.3-Matematiske-operasjoner.ipynb
+++ b/01_Undervisningsnotater/3.-Grunnleggende-programmering/3.3-Matematiske-operasjoner.ipynb
@@ -157,12 +157,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Underveisoppgaver\n",
+    "### Underveisoppgaver\n",
     "- Hent inn første måling\n",
     "- Hent inn andre måling\n",
     "- Hent inn tredje måling\n",
     "- Kalkuler gjennomsnitt ved å legge samme tre målinger og dele på 3 \n",
     "- Vis gjennomsnittet på skjerm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Formatering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a = 0.3333333333333333\n",
+      "a = 0.33\n",
+      "a =        0.3\n",
+      "a =    0.3    \n",
+      "a = 3.333333e-01\n",
+      "a = 33%\n",
+      "a =        500\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1 / 3\n",
+    "b = 500\n",
+    "\n",
+    "print(f'a = {a}')        # uformatert\n",
+    "print(f'a = {a:.2f}')    # 2 desimaler, f står for float\n",
+    "print(f'a = {a:10.1f}')  # 1 desimal og setter av ti tegn\n",
+    "print(f'a = {a:^10.1f}') # 1 desimal og setter av ti tegn og sentrerer \n",
+    "print(f'a = {a:e}')      # vitenskapelig notasjon på tallet\n",
+    "print(f'a = {a:.0%}')    # tallet i prosent med 0 desimaler\n",
+    "print(f'a = {b:10d}')    # heltall der det settes av ti tegn\n"
    ]
   },
   {
