--- a/01_Undervisningsnotater/3.-Grunnleggende-programmering/3.2-Output-og-input.ipynb
+++ b/01_Undervisningsnotater/3.-Grunnleggende-programmering/3.2-Output-og-input.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
     "\n",
     "- I all programmering trenger man variable i forbindelse med utregning, sammenlikning, lagre og gjøre endringer på informasjon\n",
     "\n",
-    "- Detkallesenvariabelfordiinnholdetkanvarierei løpet av programmet."
+    "- Det kalles en variabel fordi innholdet kan variere i løpet av programmet."
    ]
   },
   {
@@ -107,12 +107,12 @@
    "source": [
     "#### Opprette variabler med tilordning\n",
     "\n",
-    "Manbrukerettilordningsuttrykkforåoppretteen variable og lage en referanse til en dataverdi:"
+    "Man bruker et tilordningsuttrykk for å opprette en variable og lage en referanse til en dataverdi:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,25 +224,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hei, Steinar.\n"
+      "Hei, Steinar.\n",
+      "tall =    1.34   \n"
      ]
     }
    ],
    "source": [
     "navn = 'Steinar'\n",
-    "print(f'Hei, {navn}.')"
+    "print(f'Hei, {navn}.')\n",
+    "\n",
+    "tall = 1.342353\n",
+    "print(f'tall = {tall:^10.2f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,19 +588,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Hva er navnet ditt?  Steinar\n"
+      "Hva er navnet \"ditt\"?  Mads\n"
      ]
     }
    ],
    "source": [
-    "navn = input('Hva er navnet ditt? ')"
+    "navn = input('Hva er navnet \"ditt\"? ')"
    ]
   },
   {
@@ -625,21 +629,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Verdi:  5\n"
+      "Verdi:  42\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 er <class 'str'>\n"
+      "42 er <class 'str'>\n"
      ]
     }
    ],
@@ -650,21 +654,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 + 5 = 25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Obs\n",
+    "tall1 = '2'\n",
+    "tall2 = '5'\n",
+    "print(f'{tall1} + {tall2} = {tall1+tall2}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Verdi:  5\n"
+      "Verdi:  42\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 er <class 'int'>\n"
+      "42 er <class 'int'>\n"
      ]
     }
    ],
@@ -675,21 +699,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Verdi:  5\n"
+      "Verdi:  42\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.0 er <class 'float'>\n"
+      "42.0 er <class 'float'>\n"
      ]
     }
    ],
@@ -707,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
