--- a/03_Løsningsforslag/Oppgaver-fra-boka/3_Introduksjon_til_programmering_løsningsforslag.ipynb
+++ b/03_Løsningsforslag/Oppgaver-fra-boka/3_Introduksjon_til_programmering_løsningsforslag.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,14 +756,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 l is vil gi 45.84 kuler is. 45 hele kuer.\n"
+      "3 l is vil gi 45.84 kuler is. 46 hele kuer.\n"
      ]
     }
    ],
@@ -773,7 +773,7 @@
     "liter_is = 3 \n",
     "antall_kuler = liter_is / volum_kule\n",
     "\n",
-    "print(f'{liter_is} l is vil gi {antall_kuler:.2f} kuler is. {np.floor(antall_kuler):.0f} hele kuer.')"
+    "print(f'{liter_is} l is vil gi {antall_kuler:.2f} kuler is. {antall_kuler:.0f} hele kuer.')"
    ]
   },
   {
