--- a/01_Undervisningsnotater/3.-Grunnleggende-programmering/3.3-Matematiske-operasjoner.ipynb
+++ b/01_Undervisningsnotater/3.-Grunnleggende-programmering/3.3-Matematiske-operasjoner.ipynb
@@ -15,10 +15,34 @@
     "\n",
     "Ved utrekning er blir disse utført ut i fra en prioritering av hvilke operatorer som utføres først:\n",
     "\n",
-    "1.  Eksponent: **\n",
-    "2.  Multiplikasjon, divisjon og rest av divisjon: * / // %\n",
-    "3.  Addisjon og subtraksjon: + -\n",
-    "4.  Det vil si at uttrykket: 12 + 6/3 blir 14 og ikke 6 (6/3 blir utført først)"
+    "####  1.  Addisjon og subtraksjon: + -"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "12 + 5 - 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.  Multiplikasjon, divisjon og rest av divisjon: * / // %"
    ]
   },
   {
@@ -29,7 +53,7 @@
     {
      "data": {
       "text/plain": [
-       "14.0"
+       "8"
       ]
      },
      "execution_count": 2,
@@ -38,7 +62,134 @@
     }
    ],
    "source": [
-    "12 + 6 / 3"
+    "4*2 #Multiplikasjon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.5"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5/2 #Divisjon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5//2 #Divisjon uten rest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5 % 2 #Rest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. Eksponent **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100000"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10**5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100000.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1e5 #Alternativ skrivemåte for standardform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1e5 == 10**5"
    ]
   },
   {
