--- a/03_Løsningsforslag/Oppgaver-fra-boka/3_Introduksjon_til_programmering_løsningsforslag.ipynb
+++ b/03_Løsningsforslag/Oppgaver-fra-boka/3_Introduksjon_til_programmering_løsningsforslag.ipynb
@@ -855,16 +855,14 @@
    "source": [
     "### Oppgave 3.19\n",
     "Skriv et program som ber brukeren om å skrive inn to tall $a$ og $b$. Tallet $a$ skal deles på $b$. Resultatet skal skrives ut på formen:\n",
-    "$a$ delt på $b$ = antall ganger a går opp i $b + rest$\n",
+    "$a$ delt på $b$: $b$ går ? ganger opp i $a$, det er ? i rest.\n",
     "\n",
-    "#### Løsning:\n",
-    "\n",
-    "Detter er åpenbart feil. Rest må deles på b"
+    "#### Løsning:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -879,14 +877,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15 delt på 4: 4 går 3 ganger opp i 15 + 3 i rest\n"
+      "15 delt på 4: 4 går 3 ganger opp i 15, det er 3 i rest.\n"
      ]
     }
    ],
    "source": [
     "a = int(input('Skriv inn et tall: '))\n",
     "b = int(input('Skriv inn et tall til: '))\n",
-    "print(f'{a} delt på {b}: {b} går {np.floor(a/b):.0f} ganger opp i {a} + {a%b} i rest')"
+    "print(f'{a} delt på {b}: {b} går {(a//b):.0f} ganger opp i {a}, det er {a%b} i rest.')"
    ]
   },
   {
