--- a/03_Løsningsforslag/Oppgaver-fra-boka/3_Introduksjon_til_programmering_løsningsforslag.ipynb
+++ b/03_Løsningsforslag/Oppgaver-fra-boka/3_Introduksjon_til_programmering_løsningsforslag.ipynb
@@ -91,7 +91,7 @@
    "metadata": {},
    "source": [
     "### Oppgave 3.3\n",
-    "Lag et program som skriver ut tre variabler av ulik type etter hver- andre.\n",
+    "Lag et program som skriver ut tre variabler av ulik type etter hverandre.\n",
     "\n",
     "#### Løsning:"
    ]
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
      "output_type": "stream",
      "text": [
       "Tast inn navnet ditt:  Steinar\n",
-      "Hvor gammel er du, Steinar 40\n"
+      "Hvor gammel er du, Steinar:  40\n"
      ]
     },
     {
@@ -183,7 +183,7 @@
    ],
    "source": [
     "navn = input('Tast inn navnet ditt: ')\n",
-    "alder = input(f'Hvor gammel er du, {navn}')\n",
+    "alder = input(f'Hvor gammel er du, {navn}: ')\n",
     "print(f'{alder} år er ingen alder, {navn}!')"
    ]
   },
@@ -336,14 +336,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Forholde mellom massen til proteinet og massen til elektronet: 1836:1\n"
+     ]
+    }
+   ],
    "source": [
     "m_p = 1.672621898 * 10 ** (-27)\n",
     "m_e = 9.10938356 * 10 ** (-31)\n",
     "forhold = m_p/m_e\n",
-    "print(f'Forholde mellom massen til proteinet og massen til elektronet: {forhold:4.0f}')"
+    "print(f'Forholde mellom massen til proteinet og massen til elektronet: {forhold:4.0f}:1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Løsning (med e-notasjon): "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Forholde mellom massen til proteinet og massen til elektronet: 1836:1\n"
+     ]
+    }
+   ],
+   "source": [
+    "m_p = 1.672621898e-27\n",
+    "m_e = 9.10938356e-31\n",
+    "forhold = m_p/m_e\n",
+    "print(f'Forholde mellom massen til proteinet og massen til elektronet: {forhold:4.0f}:1')"
    ]
   },
   {
