--- a/01_Undervisningsnotater/3.-Grunnleggende-programmering/3.3-Matematiske-operasjoner.ipynb
+++ b/01_Undervisningsnotater/3.-Grunnleggende-programmering/3.3-Matematiske-operasjoner.ipynb
@@ -260,26 +260,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.5"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "5/2"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -326,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +318,7 @@
       "a =        0.3\n",
       "a =    0.3    \n",
       "a = 3.333333e-01\n",
-      "a = 33%\n",
+      "a = 33.3%\n",
       "a =        500\n"
      ]
     }
@@ -352,8 +332,41 @@
     "print(f'a = {a:10.1f}')  # 1 desimal og setter av ti tegn\n",
     "print(f'a = {a:^10.1f}') # 1 desimal og setter av ti tegn og sentrerer \n",
     "print(f'a = {a:e}')      # vitenskapelig notasjon på tallet\n",
-    "print(f'a = {a:.0%}')    # tallet i prosent med 0 desimaler\n",
+    "print(f'a = {a:.1%}')    # tallet i prosent med 0 desimaler\n",
     "print(f'a = {b:10d}')    # heltall der det settes av ti tegn\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.cos(2*np.pi)) # Tar radianer og ikke grader"
    ]
   },
   {
