--- a/01_Undervisningsnotater/3.-Grunnleggende-programmering/3.5-Funksjoner.ipynb
+++ b/01_Undervisningsnotater/3.-Grunnleggende-programmering/3.5-Funksjoner.ipynb
@@ -223,6 +223,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Doc-string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def er_partall(i):\n",
+    "    '''\n",
+    "        Innput: et posetivt heltall\n",
+    "        Returnerer True hvis i er partall, ellers False\n",
+    "    '''\n",
+    "    return i%2 == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "er_partall(11)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
