--- a/01_Undervisningsnotater/3.-Grunnleggende-programmering/3.6-Lokale-og-globale-variabler.ipynb
+++ b/01_Undervisningsnotater/3.-Grunnleggende-programmering/3.6-Lokale-og-globale-variabler.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,19 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(z)"
+    "print(z)\n",
+    "x"
    ]
   },
   {
@@ -69,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +84,7 @@
        "99"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +121,7 @@
        "99"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,12 +134,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Funksjoner som argument"
+    "### Funksjoner som argument\n",
+    "\n",
+    "Hva skrives ut?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,29 +151,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def funk_b(y):\n",
     "    print('Inne i funk_b')\n",
-    "    return y * 2"
+    "    return y*2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def funk_c(z):\n",
     "    print('Inne i funk_c')\n",
-    "    return z * 10"
+    "    return z*10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -236,36 +231,31 @@
    "metadata": {},
    "source": [
     "### Flere eksempler\n",
+    "Hva skrives ut?\n",
+    "\n",
     "**1.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def f(y):\n",
-    "    x = 1\n",
-    "    x = x + 1\n",
-    "    print(f'x={x} i f-scope')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x=2 i f\n",
+      "x=2 i f-scope\n",
       "x=5 i global scope\n"
      ]
     }
    ],
    "source": [
+    "def f(y):\n",
+    "    x = 1\n",
+    "    x = x + 1\n",
+    "    print(f'x={x} i f-scope')\n",
+    "    \n",
     "x = 5\n",
     "f(x)\n",
     "print(f'x={x} i global scope')"
@@ -280,25 +270,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a=1 i f-scope\n",
-      "x=5 i f-scope\n",
-      "x+1=6 i f-scope\n",
+      "a=1 i g-scope\n",
+      "x=5 i g-scope\n",
+      "x+1=6 i g-scope\n",
       "x=5 i global scope\n"
      ]
     }
    ],
    "source": [
     "def g(a):\n",
-    "    print(f'a={a} i f-scope')\n",
-    "    print(f'x={x} i f-scope')\n",
-    "    print(f'x+1={x+1} i f-scope')\n",
+    "    print(f'a={a} i g-scope')\n",
+    "    print(f'x={x} i g-scope')\n",
+    "    print(f'x+1={x+1} i g-scope')\n",
     "\n",
     "x = 5\n",
     "g(1)    \n",
@@ -314,29 +304,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'x' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-db609acd153b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0md\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-9-db609acd153b>\u001b[0m in \u001b[0;36md\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'x' referenced before assignment"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x=6 i d-scope\n",
+      "x=6 i global scope\n"
      ]
     }
    ],
    "source": [
     "def d():\n",
     "    x= x + 1\n",
+    "    print(f'x={x} i d-scope')\n",
     "\n",
     "x = 5\n",
     "d()\n",
-    "print(x)"
+    "print(f'x={x} i global scope')"
    ]
   },
   {
