--- a/03_Løsningsforslag/Oppgaver-fra-boka/3_Introduksjon_til_programmering_løsningsforslag.ipynb
+++ b/03_Løsningsforslag/Oppgaver-fra-boka/3_Introduksjon_til_programmering_løsningsforslag.ipynb
@@ -442,7 +442,7 @@
    "outputs": [],
    "source": [
     "a = sin(30)\n",
-    "print(f'Sinus av 30 grader er = {a}')"
+    "print(f'Sinus av 30° er = {a}')"
    ]
   },
   {
@@ -454,21 +454,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sinus av 30 grader er = 0.5000\n"
+      "Sinus av 30° er = 0.5000\n"
      ]
     }
    ],
    "source": [
     "import numpy as np #Vi trenger numpy-biblioteket\n",
     "a = np.sin(np.deg2rad(30)) #Så må vi gjøre om fra grader til radianer\n",
-    "print(f'Sinus av 30 grader er = {a:.4f}')"
+    "print(f'Sinus av 30° er = {a:.4f}')"
    ]
   },
   {
@@ -1137,21 +1137,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Skriv inn temperatur i Fahrenheit:  52\n"
+      "Skriv inn temperatur i Fahrenheit:  70\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "52.0F = 11.1C\n"
+      "70.0°F = 21.1°C\n"
      ]
     }
    ],
@@ -1161,7 +1161,7 @@
     "def fahrenheitTilCelsius(tf):\n",
     "    return (tf - 32) * 5/9\n",
     "\n",
-    "print(f'{tf}F = {fahrenheitTilCelsius(tf):.1f}C')"
+    "print(f'{tf}°F = {fahrenheitTilCelsius(tf):.1f}°C')"
    ]
   },
   {
