--- a/01_Undervisningsnotater/3.-Grunnleggende-programmering/3.5-Funksjoner.ipynb
+++ b/01_Undervisningsnotater/3.-Grunnleggende-programmering/3.5-Funksjoner.ipynb
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Vi kan benytte oss av koden i funksjonen ved å kalde på den:**"
+    "**Vi kan benytte oss av koden i funksjonen ved å kalle på den:**"
    ]
   },
   {
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Lager vi en funksjon med parametere må vi altid gi et argument når vi kalder på den**\n",
+    "**Lager vi en funksjon med parametere må vi altid gi et argument når vi kaller på den**\n",
     "Her er **3** argumentet"
    ]
   },
