--- a/01_Undervisningsnotater/4.-Tester-og-løkker/4.1-Tester.ipynb
+++ b/01_Undervisningsnotater/4.-Tester-og-løkker/4.1-Tester.ipynb
@@ -130,7 +130,16 @@
    "metadata": {},
    "source": [
     "#### Eksempel 2\n",
-    "Lag et program som spør brukeren om hvor høyt norges høyeste fjell er. Skriv ut en kommentar som avhenger av om høyden er under eller over 2469moh. Utvid programmet til å skille mellom flere aldre."
+    "Lag et program som spør brukeren om hvor høyt norges høyeste fjell er. Skriv ut en kommentar som avhenger av om høyden er under eller over 2469moh. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Løsning\n"
    ]
   },
   {
