--- a/02_Oppgaver/Oppgaver-fra-boka/4_Tester_og_løkker_oppgaver.ipynb
+++ b/02_Oppgaver/Oppgaver-fra-boka/4_Tester_og_løkker_oppgaver.ipynb
@@ -55,7 +55,7 @@
    "metadata": {},
    "source": [
     "### Oppgave 4.2\n",
-    "Lagetprogramsomtarettallsominput.Programmetskalsåvurdere og skrive ut om tallet er et positivt tall, negativt tall eller null.\n",
+    "Lag et program som tar et tall som input. Programmet skal så vurdere og skrive ut om tallet er et positivt tall, negativt tall eller null.\n",
     "#### Løsning:"
    ]
   },
