--- a/03_Løsningsforslag/Oppgaver-fra-boka/3_Introduksjon_til_programmering_løsningsforslag.ipynb
+++ b/03_Løsningsforslag/Oppgaver-fra-boka/3_Introduksjon_til_programmering_løsningsforslag.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1393,14 +1393,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f(1, 0, -4) = 0  =>  x = (-2.0, 2.0)\n"
+     ]
+    }
+   ],
    "source": [
     "def f(a, b, c):\n",
     "    return (-b - np.sqrt(b**2 - 4 * a * c))/(2 * a), (-b + np.sqrt(b**2 - 4 * a * c))/(2 * a)\n",
     "\n",
-    "print(f'f(1, 0, -4) = {f(1, 0,-4)}')"
+    "print(f'f(1, 0, -4) = 0  =>  x = {f(1, 0, -4)}')"
    ]
   },
   {
