--- a/03_Løsningsforslag/Oppgaver-fra-boka/4_Tester_og_løkker_løsningsforslag.ipynb
+++ b/03_Løsningsforslag/Oppgaver-fra-boka/4_Tester_og_løkker_løsningsforslag.ipynb
@@ -2042,18 +2042,113 @@
     "<img class='flyt' src='https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Bohr-atom-PAR.svg/2000px-Bohr-atom-PAR.svg.png' width='200px'>\n",
     "\n",
     "\n",
-    "#### Løsning:\n",
-    "kommer"
+    "#### Løsning:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bølgelengden: 4.873E+02nm\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(m, n):\n",
+    "    B = 2.18e-18\n",
+    "    h = 6.64e-34\n",
+    "    return B/h*(1/m**2 - 1/n**2) \n",
+    "\n",
+    "def lamda(f):\n",
+    "    c = 3.0e8\n",
+    "    return 1e9*c/f\n",
+    "  \n",
+    "# n = int(input('Hva er skallet det skal deekseteres fra?'))\n",
+    "# m = int(input('Hva er skallet det skal deekseteres til?'))\n",
+    "\n",
+    "print(f'Bølgelengden: {lamda(f(2, 4)):.3E}nm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Hva er skallet det skal deekseteres fra? 12\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "————————————————————————————\n",
+      "|   Fra skall   :    12    |\n",
+      "————————————————————————————\n",
+      "|   Skall    | Energi (J)  |\n",
+      "————————————————————————————\n",
+      "|     1      |   2.165E-18 |\n",
+      "————————————————————————————\n",
+      "|     2      |   5.299E-19 |\n",
+      "————————————————————————————\n",
+      "|     3      |   2.271E-19 |\n",
+      "————————————————————————————\n",
+      "|     4      |   1.211E-19 |\n",
+      "————————————————————————————\n",
+      "|     5      |   7.206E-20 |\n",
+      "————————————————————————————\n",
+      "|     6      |   4.542E-20 |\n",
+      "————————————————————————————\n",
+      "|     7      |   2.935E-20 |\n",
+      "————————————————————————————\n",
+      "|     8      |   1.892E-20 |\n",
+      "————————————————————————————\n",
+      "|     9      |   1.177E-20 |\n",
+      "————————————————————————————\n",
+      "|     10     |   6.661E-21 |\n",
+      "————————————————————————————\n",
+      "|     11     |   2.878E-21 |\n",
+      "————————————————————————————\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(m, n):\n",
+    "    B = 2.18e-18\n",
+    "    h = 6.64e-34\n",
+    "    return B/h*(1/n**2 - 1/m**2) \n",
+    "\n",
+    "  \n",
+    "n = int(input('Hva er skallet det skal deekseteres fra?'))\n",
+    "\n",
+    "print(linje)\n",
+    "print(f'|{\"Fra skall\":^15}:{n:^10}|')\n",
+    "linje = f'————————————————————————————'\n",
+    "print(linje)\n",
+    "print(f'|{\"Skall\":^12}|{\"Energi (J)\":^13}|')\n",
+    "for i in range(1, n):\n",
+    "    h = 6.64e-34\n",
+    "    if i != n:\n",
+    "        print( linje )\n",
+    "        print(f'|{i:^12.0f}|{h*f(n, i):12.3E} |')\n",
+    "\n",
+    "print( linje )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#kommer"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
