--- a/02_Oppgaver/Oppgaver-fra-boka/3_Introduksjon_til_programmering_oppgaver.ipynb
+++ b/02_Oppgaver/Oppgaver-fra-boka/3_Introduksjon_til_programmering_oppgaver.ipynb
@@ -792,15 +792,100 @@
     "### Oppgave 3.31 \n",
     "Lag en funksjon som tar tre variabler a, b og c, tilsvarende koeffisientene i andregradsfunksjoner av typen $f(x)=ax^2+bx+c$. La funksjonen løse andregradslikninger av typen $f(x)=0$ ved hjelp av andregradsformelen.\n",
     "\n",
-    "#### Løsning:"
+    "#### Løsning:\n",
+    "**ABC-formelen:**\n",
+    "$$ x = \\frac{-b \\pm \\sqrt{b^2 - 4ac}}{2a} $$\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_1 = -0.20\n",
+      "x_2 = -19.80\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def abc(a,b,c):\n",
+    "    '''\n",
+    "    \n",
+    "    '''\n",
+    "    if(b**2 < 4*a*c):\n",
+    "        return 'Ingen reelle løsninger!'\n",
+    "    \n",
+    "    elif(b**2 == 4*a*c):\n",
+    "        return (- b)/(2*a)\n",
+    "    \n",
+    "    else:\n",
+    "        x_1 = (- b + np.sqrt(b**2 - 4*a*c))/(2*a)\n",
+    "        x_2 = (- b - np.sqrt(b**2 - 4*a*c))/(2*a)\n",
+    "        return x_1, x_2\n",
+    "\n",
+    "\n",
+    "#print(type(x))\n",
+    "\n",
+    "def utskrift_abc(x):\n",
+    "    '''\n",
+    "     Funkesjon tar abc-funskjonen som argument\n",
+    "     Skriver ut svarene\n",
+    "    '''\n",
+    "    if(type(x) == tuple):\n",
+    "        print(f'x_1 = {x[0]:.2f}')\n",
+    "        print(f'x_2 = {x[1]:.2f}')\n",
+    "    elif(type(x) == float):\n",
+    "        print(f'x = {x:.2f}')\n",
+    "    else:\n",
+    "       print(x)\n",
+    "    \n",
+    "utskrift_abc(abc(1, 20, 4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Komplekse løsninger (imaginære tall)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((1+1j), (1-1j))"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import numpy.lib.scimath as scm\n",
+    "\n",
+    "def abc(a,b,c):\n",
+    "    if(b**2 == 4*a*c):\n",
+    "        return (- b)/(2*a)\n",
+    "    \n",
+    "    else:\n",
+    "        x_1 = (- b + scm.sqrt(b**2 - 4*a*c))/(2*a)\n",
+    "        x_2 = (- b - scm.sqrt(b**2 - 4*a*c))/(2*a)\n",
+    "        return x_1, x_2\n",
+    "\n",
+    "abc(1, -2, 2)"
+   ]
   },
   {
    "cell_type": "markdown",
