--- a/03_Løsningsforslag/Oppgaver-fra-boka/4_Tester_og_løkker_løsningsforslag.ipynb
+++ b/03_Løsningsforslag/Oppgaver-fra-boka/4_Tester_og_løkker_løsningsforslag.ipynb
@@ -1757,7 +1757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1769,10 +1769,10 @@
     }
    ],
    "source": [
-    "sum = 3\n",
+    "sum = 0\n",
     "\n",
     "for x in range(0, 10000):\n",
-    "    sum += 1/3**x\n",
+    "    sum += 3/3**x\n",
     "    \n",
     "print(f'Summen til rekka er {sum:.10f}.')"
    ]
@@ -1804,6 +1804,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Skriv om koden slik at den bruker en for-løkke, og slik at den skriver ut s.\n",
     "#### Løsning:"
    ]
   },
