--- a/01_Undervisningsnotater/4.-Tester-og-løkker/Løkke-eksempler.ipynb
+++ b/01_Undervisningsnotater/4.-Tester-og-løkker/Løkke-eksempler.ipynb
@@ -83,16 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3628800"
+       "6"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
     "        produkt *= n\n",
     "    return produkt\n",
     "\n",
-    "fakultet(10)"
+    "fakultet(3)"
    ]
   },
   {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -158,25 +158,25 @@
       "—————————————————————————————————\n",
       "| grader  | radianer  | sinus   |\n",
       "—————————————————————————————————\n",
-      "|    0.00 |      0.00 |    0.00 |\n",
-      "|   10.00 |      0.17 |    0.17 |\n",
-      "|   20.00 |      0.35 |    0.34 |\n",
-      "|   30.00 |      0.52 |    0.50 |\n",
-      "|   40.00 |      0.70 |    0.64 |\n",
-      "|   50.00 |      0.87 |    0.77 |\n",
-      "|   60.00 |      1.05 |    0.87 |\n",
-      "|   70.00 |      1.22 |    0.94 |\n",
-      "|   80.00 |      1.40 |    0.98 |\n",
-      "|   90.00 |      1.57 |    1.00 |\n",
-      "|  100.00 |      1.75 |    0.98 |\n",
-      "|  110.00 |      1.92 |    0.94 |\n",
-      "|  120.00 |      2.09 |    0.87 |\n",
-      "|  130.00 |      2.27 |    0.77 |\n",
-      "|  140.00 |      2.44 |    0.64 |\n",
-      "|  150.00 |      2.62 |    0.50 |\n",
-      "|  160.00 |      2.79 |    0.34 |\n",
-      "|  170.00 |      2.97 |    0.17 |\n",
-      "|  180.00 |      3.14 |    0.00 |\n",
+      "|  0.00   |   0.00    |  0.00   |\n",
+      "|  10.00  |   0.17    |  0.17   |\n",
+      "|  20.00  |   0.35    |  0.34   |\n",
+      "|  30.00  |   0.52    |  0.50   |\n",
+      "|  40.00  |   0.70    |  0.64   |\n",
+      "|  50.00  |   0.87    |  0.77   |\n",
+      "|  60.00  |   1.05    |  0.87   |\n",
+      "|  70.00  |   1.22    |  0.94   |\n",
+      "|  80.00  |   1.40    |  0.98   |\n",
+      "|  90.00  |   1.57    |  1.00   |\n",
+      "| 100.00  |   1.75    |  0.98   |\n",
+      "| 110.00  |   1.92    |  0.94   |\n",
+      "| 120.00  |   2.09    |  0.87   |\n",
+      "| 130.00  |   2.27    |  0.77   |\n",
+      "| 140.00  |   2.44    |  0.64   |\n",
+      "| 150.00  |   2.62    |  0.50   |\n",
+      "| 160.00  |   2.79    |  0.34   |\n",
+      "| 170.00  |   2.97    |  0.17   |\n",
+      "| 180.00  |   3.14    |  0.00   |\n",
       "—————————————————————————————————\n"
      ]
     }
@@ -190,7 +190,7 @@
     "for i in range(0, 181, 10):\n",
     "    radianer = np.deg2rad(i)\n",
     "    sinus = np.sin(radianer)\n",
-    "    print(f'| {i:7.2f} | {radianer:9.2f} | {sinus:7.2f} |')\n",
+    "    print(f'| {i:^7.2f} | {radianer:^9.2f} | {sinus:^7.2f} |')\n",
     "\n",
     "print(linje)"
    ]
