--- a/01_Undervisningsnotater/4.-Tester-og-løkker/Løkke-eksempler.ipynb
+++ b/01_Undervisningsnotater/4.-Tester-og-løkker/Løkke-eksempler.ipynb
@@ -48,17 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "1\n",
-      "-6\n",
-      "-34\n"
+      "Summen er -34\n"
      ]
     }
    ],
@@ -67,7 +64,8 @@
     "sum = 0\n",
     "for x in range(3, N+1):\n",
     "    sum += x**2 - 2**x\n",
-    "    print(sum)\n"
+    "    #print(sum)\n",
+    "print(f'Summen er {sum}')"
    ]
   },
   {
@@ -83,18 +81,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3! = 6\n"
+     ]
     }
    ],
    "source": [
@@ -104,51 +99,52 @@
     "        produkt *= n\n",
     "    return produkt\n",
     "\n",
-    "fakultet(3)"
+    "N = 3\n",
+    "print(f'{N}! = {fakultet(N)}')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "———————————————————————\n",
-      "|   n    |fakultet (!)|\n",
-      "———————————————————————\n",
-      "|   1    |          1 |\n",
-      "|   2    |          2 |\n",
-      "|   3    |          6 |\n",
-      "|   4    |         24 |\n",
-      "|   5    |        120 |\n",
-      "|   6    |        720 |\n",
-      "|   7    |       5040 |\n",
-      "|   8    |      40320 |\n",
-      "|   9    |     362880 |\n",
-      "|  10    |    3628800 |\n",
-      "———————————————————————\n"
+      "—————————————————————————\n",
+      "|   n    | fakultet (n!)|\n",
+      "—————————————————————————\n",
+      "|   1    |            1 |\n",
+      "|   2    |            2 |\n",
+      "|   3    |            6 |\n",
+      "|   4    |           24 |\n",
+      "|   5    |          120 |\n",
+      "|   6    |          720 |\n",
+      "|   7    |         5040 |\n",
+      "|   8    |        40320 |\n",
+      "|   9    |       362880 |\n",
+      "|  10    |      3628800 |\n",
+      "—————————————————————————\n"
      ]
     }
    ],
    "source": [
     "N = 10\n",
-    "linje = '———————————————————————'\n",
+    "linje = '—————————————————————————'\n",
     "print(linje)\n",
-    "print(f'|{\"n\":^7} |fakultet (!)|')\n",
+    "print(f'|{\"n\":^7} | fakultet (n!)|')\n",
     "print(linje)\n",
     "produkt = 1\n",
     "for n in range(1, N+1):\n",
     "    produkt *= n\n",
-    "    print(f'|{n:^7} | {produkt:10} |')\n",
+    "    print(f'|{n:^7} | {produkt:12} |')\n",
     "print(linje)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -156,27 +152,27 @@
      "output_type": "stream",
      "text": [
       "—————————————————————————————————\n",
-      "| grader  | radianer  | sinus   |\n",
+      "| grader  | radianer  |  sinus  |\n",
       "—————————————————————————————————\n",
-      "|  0.00   |   0.00    |  0.00   |\n",
-      "|  10.00  |   0.17    |  0.17   |\n",
-      "|  20.00  |   0.35    |  0.34   |\n",
-      "|  30.00  |   0.52    |  0.50   |\n",
-      "|  40.00  |   0.70    |  0.64   |\n",
-      "|  50.00  |   0.87    |  0.77   |\n",
-      "|  60.00  |   1.05    |  0.87   |\n",
-      "|  70.00  |   1.22    |  0.94   |\n",
-      "|  80.00  |   1.40    |  0.98   |\n",
-      "|  90.00  |   1.57    |  1.00   |\n",
-      "| 100.00  |   1.75    |  0.98   |\n",
-      "| 110.00  |   1.92    |  0.94   |\n",
-      "| 120.00  |   2.09    |  0.87   |\n",
-      "| 130.00  |   2.27    |  0.77   |\n",
-      "| 140.00  |   2.44    |  0.64   |\n",
-      "| 150.00  |   2.62    |  0.50   |\n",
-      "| 160.00  |   2.79    |  0.34   |\n",
-      "| 170.00  |   2.97    |  0.17   |\n",
-      "| 180.00  |   3.14    |  0.00   |\n",
+      "|    0    |   0.00    |  0.00   |\n",
+      "|   10    |   0.17    |  0.17   |\n",
+      "|   20    |   0.35    |  0.34   |\n",
+      "|   30    |   0.52    |  0.50   |\n",
+      "|   40    |   0.70    |  0.64   |\n",
+      "|   50    |   0.87    |  0.77   |\n",
+      "|   60    |   1.05    |  0.87   |\n",
+      "|   70    |   1.22    |  0.94   |\n",
+      "|   80    |   1.40    |  0.98   |\n",
+      "|   90    |   1.57    |  1.00   |\n",
+      "|   100   |   1.75    |  0.98   |\n",
+      "|   110   |   1.92    |  0.94   |\n",
+      "|   120   |   2.09    |  0.87   |\n",
+      "|   130   |   2.27    |  0.77   |\n",
+      "|   140   |   2.44    |  0.64   |\n",
+      "|   150   |   2.62    |  0.50   |\n",
+      "|   160   |   2.79    |  0.34   |\n",
+      "|   170   |   2.97    |  0.17   |\n",
+      "|   180   |   3.14    |  0.00   |\n",
       "—————————————————————————————————\n"
      ]
     }
@@ -185,12 +181,12 @@
     "import numpy as np\n",
     "linje = '—————————————————————————————————'\n",
     "print(linje)\n",
-    "print(f'| {\"grader\":7} | {\"radianer\":9} | {\"sinus\":7} |')\n",
+    "print(f'| {\"grader\":^7} | {\"radianer\":^9} | {\"sinus\":^7} |')\n",
     "print(linje)\n",
     "for i in range(0, 181, 10):\n",
     "    radianer = np.deg2rad(i)\n",
     "    sinus = np.sin(radianer)\n",
-    "    print(f'| {i:^7.2f} | {radianer:^9.2f} | {sinus:^7.2f} |')\n",
+    "    print(f'| {i:^7.0f} | {radianer:^9.2f} | {sinus:^7.2f} |')\n",
     "\n",
     "print(linje)"
    ]
