--- a/01_Undervisningsnotater/4.-Tester-og-løkker/Løkke-eksempler.ipynb
+++ b/01_Undervisningsnotater/4.-Tester-og-løkker/Løkke-eksempler.ipynb
@@ -196,6 +196,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "!conda update --all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
