--- a/01_Undervisningsnotater/4.-Tester-og-løkker/Løkke-eksempler.ipynb
+++ b/01_Undervisningsnotater/4.-Tester-og-løkker/Løkke-eksempler.ipynb
@@ -193,28 +193,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solving environment: done\n",
+      "\n",
+      "## Package Plan ##\n",
+      "\n",
+      "  environment location: /Users/madsor/anaconda3\n",
+      "\n",
+      "\n",
+      "The following packages will be downloaded:\n",
+      "\n",
+      "    package                    |            build\n",
+      "    ---------------------------|-----------------\n",
+      "    jupyter-1.0.0              |           py36_7           6 KB\n",
+      "\n",
+      "The following packages will be UPDATED:\n",
+      "\n",
+      "    jupyter: 1.0.0-py36_6 --> 1.0.0-py36_7\n",
+      "\n",
+      "\n",
+      "Downloading and Extracting Packages\n",
+      "jupyter-1.0.0        | 6 KB      | ##################################### | 100% \n",
+      "Preparing transaction: done\n",
+      "Verifying transaction: done\n",
+      "Executing transaction: done\n"
+     ]
+    }
+   ],
    "source": [
-    "!conda update --all"
+    "!conda update --yes --all"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
